# pdf-combiner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/pdf_combiner/: __init__.py  cli.py  combiner.py  exceptions.py  metadata.py  page_ranges.py  sorting.py
tests/: conftest.py  test_cli.py  test_combiner.py  test_metadata.py  test_page_ranges.py  test_sorting.py
