[project]
name = "pdf-combiner"
version = "0.1.0"
description = "Combine multiple PDF files into one with lossless compression"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ed Chapman", email = "edchapman88@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.3.1",
    "pikepdf>=10.5.1",
]

[project.scripts]
pdf-combiner = "pdf_combiner.cli:main"

[project.urls]
Homepage = "https://github.com/edjchapman/pdf-combiner"
Repository = "https://github.com/edjchapman/pdf-combiner"
Issues = "https://github.com/edjchapman/pdf-combiner/issues"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (catch stray prints)
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
    "PT",   # flake8-pytest-style
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "D103", "ANN", "T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pikepdf.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/pdf_combiner"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=pdf_combiner --cov-report=term-missing --cov-report=xml"
